# shinystatic

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/feasibility/: README.md  feasibility.qmd  model.py  params.yml
src/shinystatic/: __init__.py  __main__.py  core.py
tests/: conftest.py  test_cli.py  test_core.py  test_snapshot.py  test_text.py
tests/snapshots/test_snapshot/test_parameters_cell_snapshot/: parameters-cell.qmd
